# brazil_open_finance_data

./: .dockerignore  Dockerfile_apiserver  Dockerfile_dagprocessor  Dockerfile_worker  README.md  airflow.cfg  docker-compose.yml  pyproject.toml  requirements-apiserver.txt  requirements-dagprocessor.txt  requirements-worker.txt  webserver_config.py
dags/: apim.py  data_acquistion_dags.py
projects/anbima_utils/: access_anbima_api_data.py
projects/core/: azure_storage.py  blob_manager.py  bulker.py  data_acquisition.py  data_pipeline.py  schema_validator.py
projects/data_acquisition/abiove_biodiesel/: constants_biodiesel.py  dag_info.py  data_contract.py  extract_biodiesel.py  transform_biodiesel.py
projects/data_acquisition/adr/: adr_constants.py  dag_info.py  data_contract.py  extract_adr.py  transform_adr.py
projects/data_acquisition/anbima_debentures/: constants.py  dag_info.py  data_contract.py  extract.py  transform.py
projects/data_acquisition/anbima_fundos/: constants.py  dag_info.py  data_contract.py  extract.py  transform.py
projects/data_acquisition/anbima_indices_ida/: constants.py  dag_info.py  data_contract.py  extract.py  transform.py
projects/data_acquisition/anbima_indices_idka/: constants.py  dag_info.py  data_contract.py  extract.py  transform.py
projects/data_acquisition/anbima_indices_ihfa/: constants.py  dag_info.py  data_contract.py  extract.py  transform.py
projects/data_acquisition/anbima_indices_ima/: constants.py  dag_info.py  data_contract.py  extract.py  transform.py
projects/data_acquisition/balanca_comercial/: dag_info.py  (+4 more)
(+122 files in other folders)
