[project]
name = "data-acquisition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.0.1",
    "apache-airflow[celery]==3.0.1",
    "apache-airflow[microsoft-azure]==3.0.1",
    "apache-airflow[redis]==3.0.1",
    "apache-airflow-providers-common-sql==1.27.1",
    "apache-airflow-providers-microsoft-mssql==4.3.0",
    "apache-airflow-providers-fab==2.0.2",
    "azure-storage-blob==12.25.1",
    "bandit==1.8.3",
    "beautifulsoup4==4.13.4",
    "blue==0.9.1",
    "deep-translator==1.11.4",
    "duckdb==1.3.0",
    "fake-useragent==2.2.0",
    "lxml==5.4.0",
    "office365-rest-python-client==2.6.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pandera==0.24.0",
    "pandera[io]==0.24.0",
    "pyodbc==5.2.0",
    "pyproject-toml==0.1.0",
    "pytest==8.4.0",
    "requests==2.32.3",
    "workadays==2023.12.30",
    "workalendar==17.0.0",
    "xlrd==2.0.1",
    "xmltodict==0.14.2",
    "yfinance==0.2.61",
    "flask-wtf==1.2.2",
    "authlib==1.6.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg==0.30.0",
    "apache-airflow-providers-microsoft-azure>=12.5.0",
]
